--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,31 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: plum;
+}
+.card {
+  text-align: center;
+  display: inline-block;
+  margin: auto;
+  height: 500px;
+  width: 300px;
+  padding: 20px;
+  padding-top: 75px;
+  line-height: 455px;
+  border-radius: 5px;
+  margin-top: 50px;
+  position: relative;
+}
+&:before {
+  content: "\2660";
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 80px;
+}
+&:after {
+  content: "\2660";
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  font-size: 80px;
+}
