--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 body {
-  background-color: plum;
+  background-color: #0e7e12;
+  box-sizing: border-box;
 }
 .card {
   text-align: center;
@@ -8,24 +9,44 @@ body {
   margin: auto;
   height: 500px;
   width: 300px;
-  padding: 20px;
-  padding-top: 75px;
-  line-height: 455px;
+  /* padding: 20px; */
+  padding-top: 175px;
   border-radius: 5px;
   margin-top: 50px;
   position: relative;
-}
-&:before {
-  content: "\2660";
-  position: absolute;
-  top: 20px;
-  left: 20px;
   font-size: 80px;
-}
-&:after {
-  content: "\2660";
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  font-size: 80px;
+
+  &:before {
+    /* content: "\2660"; */
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 80px;
+    transform: rotate(180deg);
+  }
+  &:after {
+    /* content: "\2660"; */
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-size: 80px;
+  }
+  &.spade:before,
+  &.spade:after {
+    content: "\2660";
+  }
+  &.club:before,
+  &.club:after {
+    content: "\2663";
+  }
+  &.heart:before,
+  &.heart:after {
+    content: "\2665";
+    color: red;
+  }
+  &.diamond:before,
+  &.diamond:after {
+    content: "\2666";
+    color: red;
+  }
 }
